--- a/src/assets/css/sass/gerador_contrato/fieldset_curso.scss
+++ b/src/assets/css/sass/gerador_contrato/fieldset_curso.scss
@@ -1,47 +1,36 @@
 @use '../abstracts/' as *;
 #fieldset_curso {
-    margin: 5px;
-    height: auto;
-    width: 100%;
-    border: 1px solid #466592;
-    padding: 20px;
+    border-color: #466592 !important;
+
+    #div_curso_nome,
+    #div_curso_modulos {
+        width: 100%;
+        textarea {
+            min-height: 80px;
+        };
+    }
     .row {
+        width: 100%;
         display: flex;
-        gap: 10px;
-        flex-shrink: 1;
-        padding: 5px;
-        min-height: 40px;
-        clear: both;
-
-        .div_input {
-            flex-grow: 1;
+        div {
             flex-shrink: 1;
+            flex-grow: 1;
+            margin-right: 5px;
             display: flex;
-            flex-direction: row;
-
+            padding: 5px 0;
             &:first-child {
                 label {
                     text-align: left;
                 }
             }
-
             label {
-                color: #555;
-                padding: 0 0 0 10px;
-                background: #dddde3;
-                width: 100px;
-                max-width: 100px;
-                display: flex;
-                align-items: center;
-            }
-            input {
-                width: 75px;
+                min-width: 100px;
+                max-width: 60px;
             }
 
-            textarea {
-                width: 100%;
-            }
         }
+
+
         #div_curso_modulos {
             textarea {
                 min-height: 70px;
@@ -49,6 +38,39 @@
                 font-size: 13px;
             }
         }
+        #div_curso_vencimento,
+        #div_curso_duracao,
+        #div_curso_parcelas,
+        #div_curso_valor,
+        #div_curso_desconto,
+        #div_curso_total {
+
+            label {
+                width: 40%;
+                max-width: 50%;
+            }
+            input {
+                width: 60%;
+            }
+        }
+
+        #div_curso_inicio,
+        #div_curso_data {
+            flex-shrink: 1;
+            max-width:50% !important;
+
+            label {
+                width: 40%;
+                max-width: 50%;
+min-width: auto;
+            }
+            input {
+                width: 60%;
+min-width: auto;
+
+            }
+        }
+
         #curso_valor,
         #curso_desconto,
         #curso_total {
@@ -61,16 +83,7 @@
             color: red;
         }
 
-        #div_curso_inicio,
-        #div_curso_data {
-            label {
-                width: 40%;
-                max-width: 50%;
-            }
-            input {
-                width: 60%;
-            }
-        }
+
         #div_curso_obs {
             margin-top: 5px;
             #curso_obs {
@@ -78,14 +91,71 @@
                 padding: 5px;
             }
         }
+
     }
+    #div_curso_combo{
+        padding:10px;
+        max-width: 100%;
+        height:auto;
+        display: flex;
+        flex-wrap: wrap;
+    .row_combo{
+        min-width: 100%;
+        display: flex;
+        .div_input_combo{
+      
+          
+            #label_check_combo{
+                transition: all 0.5s;
+                @extend .btn-default;
+                input{
+                    display:none;
+                }
+            }
+            .check_combo_checked{
+                background: $secondary-color !important;
+                color:#fff !important;
+            }
+        }
+        #div_combo_curso_1, #div_combo_curso_2{
+            label{
+                background: transparent;
+                height:20px;
+                width:100%;
+                display: flex;
+            }
+
+        }
+        #combo_textarea{
+            transition: all 1s;
+            background: #fff;
+            border: 1px solid #ccc;
+            border-radius: 3px;
+            margin: 10px 0 0;
+            padding: 5px;
+            height:auto;
+        }
+
+        #div_curso_obs{
+            margin-top:10px;
+            width: 100%;
+            textarea{
+                min-width:100% !important;
+                min-height: 80px;
+            
+            }
+        }
+
+    }
+ }
+    /*
     #div_curso_combo {
-margin: 5px; 
+        margin: 5px;
         background: #dddde3;
         padding: 10px 15px;
         position: relative !important;
         user-select: none;
-     
+
         #div_combo_textarea {
             #combo_textarea {
                 background: #fff;
@@ -157,7 +227,7 @@ margin: 5px;
                 user-select: none;
             }
         }
-    }
+    }*/
 
 } // fieldset_cursos
 
