--- a/src/assets/css/sass/gerador_contrato/index.scss
+++ b/src/assets/css/sass/gerador_contrato/index.scss
@@ -3,8 +3,8 @@
 @use './fieldset_curso.scss' as *;
 @use './loading_contrato.scss' as *;
 
-*{
-  box-sizing: border-box;
+* {
+    box-sizing: border-box;
 }
 #form_contrato {
     display: flex;
@@ -30,47 +30,48 @@
         display: flex;
         flex-wrap: wrap;
 
-        .div_input {
-            overflow: hidden;
-            margin: 0;
+        div {
+            margin-right: 5px;
+        }
+        label {
             display: flex;
-      
-            min-width: 50%;
-            justify-content: flex-end;
-            padding: 5px 0px;
-            label {
-                flex: 1;
-                max-width: 60px;
-                padding:0px 10px 0px 15px;
-                
-                background: #ddd;
-                height:35px;
-                display: flex;
-                align-items: center;
-                flex-grow: 1;
+            border-radius: 3px 0 0 3px;
+            flex-shrink: 1;
+            flex-grow: 1;
+            padding: 0 10px 0 15px;
+            background: #ddd;
+            height: auto;
+            align-items: center;
+            max-width: 100px;
+        }
+        input,
+        select,
+        textarea {
+            min-width: auto !important;
+            border-radius: 0 3px 3px 0;
+            height: 35px;
+            padding: 5px;
+            border: $border-set-default;
+            font-size: 16px;
+            flex-grow: 1;
+            flex-shrink: 1;
+            resize: vertical;
+            &:focus {
+                outline: 2px solid lighten($primary-color, 20%);
+                outline-offset: -2px;
             }
-            input,
-            select,
-            textarea {
-                display: block;
-               height:35px;
-                padding: 5px;
-                border: 1px solid #aaa;
-                font-size:16px;
-                flex-grow: 1;
-                flex-shrink: 1;
-                &:focus{
-                    outline: 2px solid lighten($primary-color, 20%);
-                    outline-offset: -2px;
-                }
-            }
-            textarea {
-              resize: vertical;
-          }
-       
+
         }
 
+        .div_input {
+            margin: 0 5px 0 0;
+            display: flex;
+            flex-grow: 1;
+            flex-shrink: 1;
+            justify-content: flex-end;
+            padding: 5px 0;
 
+        }
     }
 
     // Campos com 100% width
@@ -79,9 +80,6 @@
     #div_aluno_nome,
     #div_aluno_end {
         width: 100% !important;
-        label {
-            max-width: 100px;
-        }
     }
 
     .aluno_off {
