--- a/src/components/geradorContrato/index.html
+++ b/src/components/geradorContrato/index.html
@@ -18,7 +18,7 @@
         </div>
       </div>
       <div class='div_input' id='div_resp_end'> <label><span class='required'>*</span>Endereço: </label> <input required
-          id="resp_end" type="text" /> <label class='label_numero'><span class='required'>*</span>Nº: </label> <input
+          id="resp_end" type="text" /> &nbsp;  <label class='label_numero'><span class='required'>*</span>Nº: </label> <input
           required class="end_numero" id='resp_numero' type="text" /> </div>
       <div class='div_input' id='div_resp_bairro'><label><span class='required'>*</span>Bairro: </label> <input required
           id="resp_bairro" type="text" /> </div>
@@ -35,8 +35,8 @@
     <div class='fieldset' id='fieldset_aluno'>
       <div class='div_input' id='div_aluno_nome'>
         <div id='block_aluno'></div> <label><span class='required'>*</span>Aluno(a): </label> <input required
-          id="aluno_nome" type="text" /> <label id='label_parentesco'>Parentesco: </label> <select
-          id='aluno_parentesco'>
+          id="aluno_nome" type="text" /> &nbsp; <label id='label_parentesco'>Parentesco: </label> 
+          <select id='aluno_parentesco'>
           <option value="" selected="true" disabled="disabled"></option>
           <option value="Filho(a)">Filho(a)</option>
           <option value="Irmão(a)">Irmão(a)</option>
@@ -46,7 +46,7 @@
           <option value="Responsável Legal">Responsável Legal</option>
         </select>
       </div>
-      <div class='div_input' id='div_aluno_end'> <label>Endereço: </label> <input id="aluno_end" type="text" /> <label
+      <div class='div_input' id='div_aluno_end'> <label>Endereço: </label> <input id="aluno_end" type="text" /> &nbsp; <label
           class='label_numero'>Nº: </label> <input class="end_numero" id='aluno_numero' type="text" /> </div>
       <div class='div_input' id='div_aluno_bairro'><label>Bairro: </label> <input id="aluno_bairro" type="text" />
       </div>
@@ -56,9 +56,9 @@
       <div class='div_input' id='div_aluno_tel'><label>Tel.: </label> <input id="aluno_tel" type="text" /></div>
     </div>
     <!--div fieldset-->
+    <!------------------------------ FIELDSET CURSO------------------------------->
     <div class='fieldset' id='fieldset_curso'>
-      <div class='row'>
-        <div class='div_input' id='div_curso_nome'> <label><span class='required'>&nbsp;&nbsp;
+        <div  class='div_input'id='div_curso_nome'> <label><span class='required'>&nbsp;&nbsp;
               *</span> Curso: </label>
           <select required id='curso_nome'>
             <option selected="true" disabled="disabled"></option>
@@ -78,64 +78,74 @@
             </option>
           </select>
         </div>
+     
+        <div  class='div_input' id='div_curso_modulos'> <label id='label_curso_modulos'>Módulos: </label> 
+          <textarea id="curso_modulos" spellcheck="false"></textarea></div>
+   
+
+      <div class='row'>
+        <div  id='div_curso_duracao'> <label>D. Meses: </label> <input id="curso_duracao" type="number" /> </div>
+        <div  id='div_curso_parcelas'> <label>Parcelas: </label> <input id="curso_parcelas"
+            type="number" /> </div>
+        <div  id='div_curso_vencimento'> 
+          <label>Dia Venc.: </label> <input id="curso_vencimento" type="number" /> </div>
       </div>
       <!--row-->
       <div class='row'>
-        <div class='div_input' id='div_curso_modulos'> <label id='label_curso_modulos'>Módulos: </label> <textarea
-            id="curso_modulos" spellcheck="false"></textarea> </div>
-      </div>
-      <!--row-->
-      <div class='row'>
-        <div class='div_input' id='div_curso_duracao'> <label>D. Meses: </label> <input id="curso_duracao"
-            type="number" /> </div>
-        <div class='div_input' id='div_curso_duracao'> <label>Parcelas: </label> <input id="curso_parcelas"
-            type="number" /> </div>
-        <div class='div_input' id='div_curso_vencimento'> <label>Dia Venc.: </label> <input id="curso_vencimento"
-            type="number" /> </div>
-      </div>
-      <!--row-->
-      <div class='row'>
-        <div class='div_input' id='div_curso_valor'> <label>Valor R$: </label> <input id="curso_valor" type="text"
+        <div  id='div_curso_valor'> <label>Valor R$: </label> <input id="curso_valor" type="text"
             value='0,00' /> </div>
-        <div class='div_input' id='div_curso_desconto'> <label for='curso_desconto'> Desconto R$: </label> <input
+        <div  id='div_curso_desconto'> <label for='curso_desconto'> Desc. R$: </label> <input
             id="curso_desconto" type="text" value='0,00' /> </div>
-        <div class='div_input' id='div_curso_total'> <label>Total R$: </label> <input id="curso_total" type="text"
+        <div  id='div_curso_total'> <label>Total R$: </label> <input id="curso_total" type="text"
             value='0,00' /> </div>
       </div>
       <!--row-->
       <div class='row'>
-        <div class='div_input' id='div_curso_inicio'> <label>Data de Início: </label> <input id="curso_inicio"
+      
+        <div  id='div_curso_inicio'> <label>Data de Início: </label> <input id="curso_inicio"
             type="date" /> </div>
-        <div class='div_input' id='div_curso_data'> <label>Data Contrato: </label> <input id="curso_data_contrato"
+        <div  id='div_curso_data'> <label>Data Contrato: </label> <input id="curso_data_contrato"
             type="date" /> </div>
       </div>
       <!--row-->
       <div class='div_input' id='div_curso_combo'>
-        <div id='combo_bloco_1'> <label id='label_check_combo' for='check_combo'> Desconto Combo <input id='check_combo'
-              type='checkbox' value='false' /> </label>
-          <div id='div_combo_curso_2'> <label>Curso 2: </label> <select id='combo_curso_2'>
-              <!--Recebe os valores de curso_nome via função em render-->
-            </select> </div>
-          <!--div_combo_curso_2-->
-          <div id='div_combo_curso_1'> <label>Curso 1: </label> <input id='combo_curso_1' disabled='disabled'
-              type='text' value='Inglês Completo' /> </div>
-          <!--div_combo_curso_1-->
-        </div>
-        <!--combo_bloco_1-->
-        <div style='clear:both;'></div>
+          <div class='row_combo'>
+            <div class='div_input_combo'>
+              <label id='label_check_combo' for='check_combo'>
+                Desconto Combo
+                <input id='check_combo' type='checkbox' value='false' />
+              </label>
+            </div>
+            <div class='div_input_combo' id='div_combo_curso_1'>
+              <label>Curso 1: </label>
+              <input id='combo_curso_1' disabled='disabled' type='text' value='Inglês Completo' />
+            </div>
+            <div class='div_input_combo' id='div_combo_curso_2'>
+              <label>Curso 2: </label>
+              <select id='combo_curso_2'>
+                <!--Recebe os valores de curso_nome via função em render-->
+              </select>
+            </div>
+          
+           </div>
+      <!--row-->
+      <div class='row_combo'>
         <div id='div_combo_textarea'>
-          <div contenteditable="true" class='display_off' spellcheck="false" id='combo_textarea'> </div>
+          <div contenteditable="true" class='display_off' spellcheck="false" id='combo_textarea'>
+          </div>
         </div>
-      </div>
-      <!--div_curso_combo-->
-      <div class='row'>
-        <div class='div_input' id='div_curso_obs'>
+      </div><!--row-->
+      <div class='row_combo'>
+        <div id='div_curso_obs'>
           <label>Observações: </label>
           <textarea id='curso_obs' placeholder="Descontos e outros detalhes aqui...">
               </textarea>
         </div>
-      </div>
-      </div>
+</div>
+<!--row-->
+ 
+
+    
       <!--div fieldset-->
       <button id='btn_salvar' type="submit">Salvar Contrato</button>
   </form>
