Ajustes de layout contrato_page

--- a/src/assets/css/sass/abstracts/_variables.scss
+++ b/src/assets/css/sass/abstracts/_variables.scss
@@ -38,7 +38,7 @@ $title-color-dark: #333;
 $title-color-light: #f0f0f0; 
 
 //Borders
-$border-color-medium: #ccc;
+$border-color-medium: #aaa;
 
 $border-set-default: 1px solid $border-color-medium;
 $border-radius: 3px;
