--- a/src/assets/css/sass/gerador_contrato/index.scss
+++ b/src/assets/css/sass/gerador_contrato/index.scss
@@ -29,9 +29,11 @@
         height: auto;
         display: flex;
         flex-wrap: wrap;
-
+ & > div{
+padding-bottom:10px;
+ }
         div {
-            margin-right: 5px;
+            
         }
         label {
             display: flex;
@@ -39,7 +41,7 @@
             flex-shrink: 1;
             flex-grow: 1;
             padding: 0 10px 0 15px;
-            background: #ddd;
+            background: #e9e9e9;
             height: auto;
             align-items: center;
             max-width: 100px;
@@ -49,7 +51,7 @@
         textarea {
             min-width: auto !important;
             border-radius: 0 3px 3px 0;
-            height: 35px;
+            min-height: 35px;
             padding: 5px;
             border: $border-set-default;
             font-size: 16px;
@@ -89,10 +91,12 @@
         margin-bottom: 0;
     }
     .display_off {
+        overflow: hidden;
         height: 1px !important;
         padding: 0 !important;
         opacity: 0 !important;
         margin: 0 0 -10px !important;
+       
     }
 
     #btn_salvar {
