--- a/src/components/geradorContrato/index.html
+++ b/src/components/geradorContrato/index.html
@@ -112,13 +112,13 @@
           <div class='row_combo'>
             <div class='div_input_combo'>
               <label id='label_check_combo' for='check_combo'>
-                Desconto Combo
+                <span>+ Desconto Combo</span>
                 <input id='check_combo' type='checkbox' value='false' />
               </label>
             </div>
             <div class='div_input_combo' id='div_combo_curso_1'>
               <label>Curso 1: </label>
-              <input id='combo_curso_1' disabled='disabled' type='text' value='Inglês Completo' />
+              <input id='combo_curso_1' disabled='disabled' type='text' value='' />
             </div>
             <div class='div_input_combo' id='div_combo_curso_2'>
               <label>Curso 2: </label>
@@ -136,14 +136,15 @@
         </div>
       </div><!--row-->
       <div class='row_combo'>
-        <div id='div_curso_obs'>
-          <label>Observações: </label>
-          <textarea id='curso_obs' placeholder="Descontos e outros detalhes aqui...">
-              </textarea>
+      
         </div>
 </div>
 <!--row-->
- 
+<div class='div_input' id='div_curso_obs'>
+  <label>Observações: </label>
+  <textarea id='curso_obs' placeholder="Descontos e outros detalhes aqui..."></textarea>
+
+ </div>
 
     
       <!--div fieldset-->
