--- a/src/components/geradorContrato/index.html
+++ b/src/components/geradorContrato/index.html
@@ -145,7 +145,7 @@
   <textarea id='curso_obs' placeholder="Descontos e outros detalhes aqui..."></textarea>
 
  </div>
-
+</div>
     
       <!--div fieldset-->
       <button id='btn_salvar' type="submit">Salvar Contrato</button>
