--- a/src/assets/css/sass/gerador_contrato/index.scss
+++ b/src/assets/css/sass/gerador_contrato/index.scss
@@ -25,15 +25,15 @@
         max-width: 100%;
         margin: 10px 20px;
         border: 1px solid #aaa;
-        padding: 20px;
+        padding: 30px;
         height: auto;
         display: flex;
         flex-wrap: wrap;
         & > div{
-                padding-bottom:10px;
+   
         }
         div {
-            
+           
         }
         label {
             display: flex;
@@ -41,10 +41,10 @@
             flex-shrink: 1;
             flex-grow: 1;
             padding: 0 10px 0 15px;
-            background: #e9e9e9;
             height: auto;
             align-items: center;
-            max-width: 100px;
+            max-width:100px;
+            min-width: 100px;
         }
         input,
         select,
@@ -66,12 +66,13 @@
         }
 
         .div_input {
-            margin: 0 5px 0 0;
+            margin: 0 5px 3px 0;
             display: flex;
             flex-grow: 1;
             flex-shrink: 1;
             justify-content: flex-end;
-            padding: 5px 0;
+            padding: 6px 0;
+       
 
         }
     }
